--- a/Projeto--PHYNHANCAI.css
+++ b/Projeto--PHYNHANCAI.css
@@ -583,11 +583,12 @@
 .u-section-5 .u-text-1 {
   text-transform: uppercase;
   font-weight: 700;
-  margin: 69px 222px 0 245px;
+  width: 673px;
+  margin: 70px auto 0;
 }
 
 .u-section-5 .u-list-1 {
-  margin-top: 91px;
+  margin-top: 90px;
   margin-bottom: 60px;
 }
 
@@ -660,11 +661,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-5 .u-text-1 {
-    margin-right: 122px;
-    margin-left: 145px;
-  }
-
   .u-section-5 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 10px));
     min-height: 302px;
@@ -672,11 +668,6 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-5 .u-text-1 {
-    margin-right: 12px;
-    margin-left: 35px;
-  }
-
   .u-section-5 .u-repeater-1 {
     grid-template-columns: 100%;
   }
@@ -684,8 +675,7 @@
 
 @media (max-width: 767px) {
   .u-section-5 .u-text-1 {
-    margin-right: 0;
-    margin-left: 0;
+    width: 540px;
   }
 
   .u-section-5 .u-container-layout-1 {
@@ -700,8 +690,8 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 738px;
+  .u-section-5 .u-text-1 {
+    width: 340px;
   }
 
   .u-section-5 .u-list-1 {
@@ -1164,7 +1154,7 @@
 
 .u-section-9 .u-list-2 {
   width: 558px;
-  margin: -372px 0 60px auto;
+  margin: -372px 0 0 auto;
 }
 
 .u-section-9 .u-repeater-2 {
@@ -1200,25 +1190,14 @@
   margin: 98px auto 0;
 }
 
-@media (max-width: 1199px) {
-  .u-section-9 .u-list-2 {
-    margin-top: 20px;
-  }
+.u-section-9 .u-text-3 {
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 673px;
+  margin: 98px auto 60px;
 }
 
 @media (max-width: 991px) {
-  .u-section-9 .u-list-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-9 .u-list-2 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
   .u-section-9 .u-image-2 {
     margin-top: 86px;
     margin-right: 225px;
@@ -1226,9 +1205,17 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-9 .u-list-1 {
+    width: 540px;
+  }
+
   .u-section-9 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-9 .u-list-2 {
+    width: 540px;
   }
 
   .u-section-9 .u-image-2 {
@@ -1236,12 +1223,209 @@
     margin-right: auto;
     margin-left: 131px;
   }
+
+  .u-section-9 .u-text-3 {
+    width: 540px;
+  }
 }
 
 @media (max-width: 575px) {
+  .u-section-9 .u-list-1 {
+    width: 340px;
+  }
+
+  .u-section-9 .u-list-2 {
+    width: 340px;
+  }
+
   .u-section-9 .u-image-2 {
     margin-top: 96px;
     margin-right: 23px;
     margin-left: auto;
+  }
+
+  .u-section-9 .u-text-3 {
+    width: 340px;
+  }
+} .u-section-10 {
+  background-image: none;
+}
+
+.u-section-10 .u-sheet-1 {
+  min-height: 634px;
+}
+
+.u-section-10 .u-list-1 {
+  width: 560px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-10 .u-repeater-1 {
+  grid-template-columns: 100%;
+  min-height: 372px;
+  grid-gap: 20px 20px;
+}
+
+.u-section-10 .u-list-item-1 {
+  background-image: none;
+}
+
+.u-section-10 .u-container-layout-1 {
+  padding: 0 30px;
+}
+
+.u-section-10 .u-icon-1 {
+  height: 64px;
+  width: 64px;
+  background-image: none;
+  margin: -15px auto 0;
+  padding: 18px;
+}
+
+.u-section-10 .u-text-1 {
+  font-weight: 700;
+  margin: 51px auto 0;
+}
+
+.u-section-10 .u-image-1 {
+  width: 159px;
+  height: 82px;
+  margin: 68px auto 0;
+}
+
+.u-section-10 .u-list-2 {
+  width: 558px;
+  margin: -372px 0 60px auto;
+}
+
+.u-section-10 .u-repeater-2 {
+  grid-template-columns: 100%;
+  min-height: 372px;
+  grid-gap: 20px 20px;
+}
+
+.u-section-10 .u-list-item-2 {
+  background-image: none;
+}
+
+.u-section-10 .u-container-layout-2 {
+  padding: 0;
+}
+
+.u-section-10 .u-icon-2 {
+  height: 64px;
+  width: 64px;
+  background-image: none;
+  margin: -15px auto 0;
+  padding: 18px;
+}
+
+.u-section-10 .u-text-2 {
+  font-weight: 700;
+  margin: 50px auto 0;
+}
+
+.u-section-10 .u-image-2 {
+  width: 159px;
+  height: 82px;
+  margin: 68px 191px 0 auto;
+}
+
+@media (max-width: 767px) {
+  .u-section-10 .u-list-1 {
+    width: 540px;
+  }
+
+  .u-section-10 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-10 .u-list-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-10 .u-list-1 {
+    width: 340px;
+  }
+
+  .u-section-10 .u-list-2 {
+    width: 340px;
+  }
+
+  .u-section-10 .u-image-2 {
+    margin-right: 181px;
+  }
+} .u-section-11 {
+  background-image: none;
+}
+
+.u-section-11 .u-sheet-1 {
+  min-height: 634px;
+}
+
+.u-section-11 .u-list-1 {
+  width: 560px;
+  margin: 0 auto;
+}
+
+.u-section-11 .u-repeater-1 {
+  grid-template-columns: 100%;
+  min-height: 372px;
+  grid-gap: 20px 20px;
+}
+
+.u-section-11 .u-list-item-1 {
+  background-image: none;
+}
+
+.u-section-11 .u-container-layout-1 {
+  padding: 0 30px;
+}
+
+.u-section-11 .u-icon-1 {
+  height: 64px;
+  width: 64px;
+  background-image: none;
+  margin: -15px auto 0;
+  padding: 18px;
+}
+
+.u-section-11 .u-text-1 {
+  font-weight: 700;
+  margin: 51px auto 0;
+}
+
+.u-section-11 .u-image-1 {
+  width: 159px;
+  height: 82px;
+  margin: 68px auto 0;
+}
+
+.u-section-11 .u-list-2 {
+  width: 558px;
+  margin: -372px 0 372px auto;
+}
+
+@media (max-width: 991px) {
+  .u-section-11 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-11 .u-list-2 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-11 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
